# browser-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: plans.md  status.md  test-plan.md
src/browser_agent/: __main__.py  agent.py  browser_engine.py  cli.py  dom_snapshot.py  logging_utils.py  openai_client.py  security.py  subagents.py  tools.py  ui.py
tests/: test_dom_snapshot.py  test_security.py
